Update Validation Project HTML File.html

--- a/Validation Project HTML File.html
+++ b/Validation Project HTML File.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
+<body>
+  <div class="left">
+    <!-- You can add any content here if needed, or leave it blank -->
+  </div>
+  <div class="right">
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Form Validation Example</title>
+  <title>Form Validation</title>
   <link rel="stylesheet" href="Validation Project CSS File.css">
 </head>
 <body>
